minor linter fixes. update json.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -63,7 +63,8 @@
 					"options": { "strictCase": false }
 				}
 			},
-			"suspicious": { "noEmptyInterface": "off", "noRedeclare": "off" }
+			"suspicious": { "noEmptyInterface": "off", "noRedeclare": "off" },
+			"complexity": { "noThisInStatic": "warn" }
 		}
 	},
 	"javascript": {
