--- a/pkg/nodejs/@datasworn/ironsworn-classic-delve/package.json
+++ b/pkg/nodejs/@datasworn/ironsworn-classic-delve/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@datasworn/ironsworn-classic-delve",
-	"version": "0.1.0-0",
+	"version": "0.1.0",
 	"description": "Datasworn JSON data for the Ironsworn: Delve expansion.",
 	"files": [
 		"json",
@@ -33,7 +33,7 @@
 		"url": "https://github.com/rsek/datasworn/issues"
 	},
 	"dependencies": {
-		"@datasworn/ironsworn-classic": "0.1.0-0"
+		"@datasworn/ironsworn-classic": "0.1.0"
 	},
 	"authors": [
 		{
