--- a/pkg/nodejs/@datasworn/ironsworn-classic/package.json
+++ b/pkg/nodejs/@datasworn/ironsworn-classic/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@datasworn/ironsworn-classic",
-	"version": "0.1.0-0",
+	"version": "0.1.0",
 	"description": "Datasworn JSON data for the Ironsworn RPG.",
 	"files": [
 		"json",
@@ -31,7 +31,7 @@
 		"url": "https://github.com/rsek/datasworn/issues"
 	},
 	"dependencies": {
-		"@datasworn/core": "0.1.0-0"
+		"@datasworn/core": "0.1.0"
 	},
 	"authors": [
 		{
