adjust field_key

--- a/source_data/sundered_isles/assets/path.yaml
+++ b/source_data/sundered_isles/assets/path.yaml
@@ -731,10 +731,10 @@ assets:
           <<: *Source
         <<: *PathAsset
         options:
-          field_one:
+          field_1:
             label: field
             field_type: text
-          field_two:
+          field_2:
             label: field
             field_type: text
         abilities:
