DelveSiteTheme, DelveSiteDomain: collapse `summary` and `description` to just `description`; fix missing `description` property.

--- a/source_data/delve/site_domains.yaml
+++ b/source_data/delve/site_domains.yaml
@@ -17,11 +17,11 @@ site_domains:
         authors:
           - name: Shawn Tomkin
       page: 88
-    summary: The dead are enshrined here.
-    description: |-
-      In this cruel land, there is no shortage of dead to be put to rest. Some barrows are simple crypts for a family or steading. Others are more elaborate or extensive, plunging well into the depths of the earth. A few inconspicuous mounds, their rock and earth worn by time, mark an entryway into impossibly labyrinthine tombs built by long-forgotten people.
+    description: The dead are enshrined here.
+    # description: |-
+    #   In this cruel land, there is no shortage of dead to be put to rest. Some barrows are simple crypts for a family or steading. Others are more elaborate or extensive, plunging well into the depths of the earth. A few inconspicuous mounds, their rock and earth worn by time, mark an entryway into impossibly labyrinthine tombs built by long-forgotten people.
 
-      Even the most ancient of these sites still echo with the memory and power of lives once lived, battles once fought, loves gained or lost, and vows unfulfilled.
+    #   Even the most ancient of these sites still echo with the memory and power of lives once lived, battles once fought, loves gained or lost, and vows unfulfilled.
     features:
       - roll: { min: 21, max: 43 }
         text: Burial chambers
@@ -79,11 +79,11 @@ site_domains:
     _source:
       <<: *Source
       page: 88
-    summary: A place of stone and darkness.
-    description: |-
-      Another world lies beneath our feet. Caverns vein the Ironlands with meandering tunnels, plunging pits, soaring chambers, and absolute darkness. Claustrophobic crawlspaces and crevices may lead to miles-long cave complexes. Underground waterways carve a relentless path through stone.
+    description: A place of stone and darkness.
+    # description: |-
+    #   Another world lies beneath our feet. Caverns vein the Ironlands with meandering tunnels, plunging pits, soaring chambers, and absolute darkness. Claustrophobic crawlspaces and crevices may lead to miles-long cave complexes. Underground waterways carve a relentless path through stone.
 
-      When you enter these sites, you are a trespasser in a hostile domain. What unseen things dwell here, watching and waiting, amidst the depths?
+    #   When you enter these sites, you are a trespasser in a hostile domain. What unseen things dwell here, watching and waiting, amidst the depths?
     features:
       - roll: { min: 21, max: 43 }
         text: Twisting passages
@@ -124,11 +124,11 @@ site_domains:
     _source:
       <<: *Source
       page: 89
-    summary: A place of deep caves and enduring cold.
-    description: |-
-      These maze-like tunnels are found in the most inhospitable northern reaches of the Ironlands—carved through glacier, mountain, and hill—or in places of supernatural cold. Their icy depths are a perilous environment of fracturing terrain, shadowy reflections, hollow echoes, and lurking predators.
+    description: A place of deep caves and enduring cold.
+    # description: |-
+    #   These maze-like tunnels are found in the most inhospitable northern reaches of the Ironlands—carved through glacier, mountain, and hill—or in places of supernatural cold. Their icy depths are a perilous environment of fracturing terrain, shadowy reflections, hollow echoes, and lurking predators.
 
-      Entering a frozen cavern is like delving into another world. There is a stark beauty in the icebound passages and glistening chambers. Amazing discoveries, locked in the ice, lie unseen for millennia. But do not be distracted by those enticements. The hazards of this site have no sympathy for the unwary and ill-prepared.
+    #   Entering a frozen cavern is like delving into another world. There is a stark beauty in the icebound passages and glistening chambers. Amazing discoveries, locked in the ice, lie unseen for millennia. But do not be distracted by those enticements. The hazards of this site have no sympathy for the unwary and ill-prepared.
     features:
       - roll: { min: 21, max: 43 }
         text: Maze of icy tunnels
@@ -169,11 +169,11 @@ site_domains:
     _source:
       <<: *Source
       page: 89
-    summary: A frigid landscape formed of frozen seas.
-    description: |-
-      An Icereach is an expanse of frozen sea, blue-white and sprawling in all directions. These sites are typically found in the northernmost waters. However, a few vast icereaches—kept perpetually frozen by forces we do not understand—clog the seas in southern regions.
+    description: A frigid landscape formed of frozen seas.
+    # description: |-
+    #   An Icereach is an expanse of frozen sea, blue-white and sprawling in all directions. These sites are typically found in the northernmost waters. However, a few vast icereaches—kept perpetually frozen by forces we do not understand—clog the seas in southern regions.
 
-      Only the cruelest, most powerful creatures can survive here. The terrain is rugged and cut-through with unstable ice and frigid waterways. Food is scarce. Bitter winds blast the landscape. The remains of ships, locked within the ice, stand as monuments to those who braved these places and were forever lost.
+    #   Only the cruelest, most powerful creatures can survive here. The terrain is rugged and cut-through with unstable ice and frigid waterways. Food is scarce. Bitter winds blast the landscape. The remains of ships, locked within the ice, stand as monuments to those who braved these places and were forever lost.
     features:
       - roll: { min: 21, max: 43 }
         text: Plains of ice and snow
@@ -215,11 +215,11 @@ site_domains:
     _source:
       <<: *Source
       page: 90
-    summary: Tunnels dug greedily and deep.
-    description: |-
-      Within the earth, riches await the bold. Some mines are shallow pits worked by pick and shovel. Others are offshoots of existing caverns which pierce deep into hills and mountains. A few are the remains of vast underground complexes built by forgotten cultures.
+    description: Tunnels dug greedily and deep.
+    # description: |-
+    #   Within the earth, riches await the bold. Some mines are shallow pits worked by pick and shovel. Others are offshoots of existing caverns which pierce deep into hills and mountains. A few are the remains of vast underground complexes built by forgotten cultures.
 
-      The iron and other metals claimed from these sites feed our furnaces. From those fires, we craft tools, armor, weapons, and other precious goods. Our hunger for these resources is never satiated, and we often dig into places best left undisturbed.
+    #   The iron and other metals claimed from these sites feed our furnaces. From those fires, we craft tools, armor, weapons, and other precious goods. Our hunger for these resources is never satiated, and we often dig into places best left undisturbed.
     features:
       - roll: { min: 21, max: 43 }
         text: Cramped tunnels
@@ -260,11 +260,11 @@ site_domains:
     _source:
       <<: *Source
       page: 90
-    summary: Treacherous paths over high mountains.
-    description: |-
-      Winding through highlands and mountain ranges, these sites offer a tempting route over otherwise impassable terrain. But treacherous landscapes, foul weather, and a host of mountain predators offer their own dangers. Raiders and others take advantage of these natural chokepoints to ambush the unwary.
+    description: Treacherous paths over high mountains.
+    # description: |-
+    #   Winding through highlands and mountain ranges, these sites offer a tempting route over otherwise impassable terrain. But treacherous landscapes, foul weather, and a host of mountain predators offer their own dangers. Raiders and others take advantage of these natural chokepoints to ambush the unwary.
 
-      Lonely cairns mark the resting places of those who walked these routes undefended or unprepared. Pray that your path here does not end under a pile of mountain stones.
+    #   Lonely cairns mark the resting places of those who walked these routes undefended or unprepared. Pray that your path here does not end under a pile of mountain stones.
     features:
       - roll: { min: 21, max: 43 }
         text: Winding mountain path
@@ -306,11 +306,11 @@ site_domains:
     _source:
       <<: *Source
       page: 91
-    summary: The crumbling legacy of a dead civilization.
-    description: |-
-      These decaying edifices, skeletal and shadowed, mark the remains of once-great communities and civilizations. Some of these sites have been newly adapted by [Ironlanders](datasworn:npc_collection:classic/ironlanders) as shelter, temple, or citadel. Others are home only to dangerous creatures and dark forces.
+    description: The crumbling legacy of a dead civilization.
+    # description: |-
+    #   These decaying edifices, skeletal and shadowed, mark the remains of once-great communities and civilizations. Some of these sites have been newly adapted by [Ironlanders](datasworn:npc_collection:classic/ironlanders) as shelter, temple, or citadel. Others are home only to dangerous creatures and dark forces.
 
-      Newly discovered ruins tempt bold explorers with the promise of powerful legacies and forgotten secrets. But most see these places as a portent of our inescapable, grim fate in these lands. Someday, another people may delve into the ruins of what we leave behind.
+    #   Newly discovered ruins tempt bold explorers with the promise of powerful legacies and forgotten secrets. But most see these places as a portent of our inescapable, grim fate in these lands. Someday, another people may delve into the ruins of what we leave behind.
     features:
       - roll: { min: 21, max: 43 }
         text: Crumbling corridors and chambers
@@ -352,11 +352,11 @@ site_domains:
     _source:
       <<: *Source
       page: 91
-    summary: Stone passages carved by ocean waves.
-    description: |-
-      Carved by ocean waves and unyielding currents, the sea caves pockmarking the coasts plunge deep into the land’s dark heart. Deadly creatures or determined foes often lair within, but it is the water that is your ever-present enemy. The chill and damp seep into your bones. The tides and upland flooding can bring a torrent of water with little warning. You plunge desperately through submerged passages, praying that an opening will provide a pocket of air.
+    description: Stone passages carved by ocean waves.
+    # description: |-
+    #   Carved by ocean waves and unyielding currents, the sea caves pockmarking the coasts plunge deep into the land’s dark heart. Deadly creatures or determined foes often lair within, but it is the water that is your ever-present enemy. The chill and damp seep into your bones. The tides and upland flooding can bring a torrent of water with little warning. You plunge desperately through submerged passages, praying that an opening will provide a pocket of air.
 
-      This is a realm of water and stone, cold and darkness. You are not welcome here.
+    #   This is a realm of water and stone, cold and darkness. You are not welcome here.
     features:
       - roll: { min: 21, max: 43 }
         text: Watery tunnels
@@ -397,11 +397,11 @@ site_domains:
     _source:
       <<: *Source
       page: 92
-    summary: A primeval marsh, cloaked in mist.
-    description: |-
-      These foul sites are cloaked in mist, clogged with muddy peat, and drenched in fetid water. Thickets of gray, skeletal trees conceal stalking creatures. Strange shapes move in the fog and beneath dark, placid water. Narrow trails tease with the promise of passage, but instead lead to hidden quagmires.
+    description: A primeval marsh, cloaked in mist.
+    # description: |-
+    #   These foul sites are cloaked in mist, clogged with muddy peat, and drenched in fetid water. Thickets of gray, skeletal trees conceal stalking creatures. Strange shapes move in the fog and beneath dark, placid water. Narrow trails tease with the promise of passage, but instead lead to hidden quagmires.
 
-      Be wary. When you enter a shadowfen, the specter of death is your constant companion.
+    #   Be wary. When you enter a shadowfen, the specter of death is your constant companion.
     features:
       - roll: { min: 21, max: 43 }
         text: Narrow path through a fetid bog
@@ -442,8 +442,8 @@ site_domains:
     _source:
       <<: *Source
       page: 92
-    summary: A fortress secured against trespassers.
-    description: These sites weather storms and sieges alike. Their walls stand firm against the forces of this dark land. They are fortified against attack and rife with guards, traps, and other defenses. For those who dwell within, strongholds provide the comfort of wood and stone, axe and bow. For those who seek to breach the walls, they can be as unyielding and unforgiving as the most stalwart ironbound shield.
+    description: A fortress secured against trespassers.
+    # description: These sites weather storms and sieges alike. Their walls stand firm against the forces of this dark land. They are fortified against attack and rife with guards, traps, and other defenses. For those who dwell within, strongholds provide the comfort of wood and stone, axe and bow. For those who seek to breach the walls, they can be as unyielding and unforgiving as the most stalwart ironbound shield.
     features:
       - roll: { min: 21, max: 43 }
         text: Connecting passageways
@@ -486,11 +486,11 @@ site_domains:
     _source:
       <<: *Source
       page: 93
-    summary: A perilous forest of eternal shadow.
-    description: |-
-      A tanglewood is a thick wilderness, shrouded in mist. Overhanging, twisted boughs obscure the sky. The ground is snarled with exposed roots. The wind carries foreboding whispers, and branches rattle like old bones.
+    description: A perilous forest of eternal shadow.
+    # description: |-
+    #   A tanglewood is a thick wilderness, shrouded in mist. Overhanging, twisted boughs obscure the sky. The ground is snarled with exposed roots. The wind carries foreboding whispers, and branches rattle like old bones.
 
-      Many refuse to harvest wood from these places, believing the spirits who reside within will bring a curse upon them and their families. Others fear the creatures and beings which lurk within. For these reasons, even near settled areas, the tangles still stand.
+    #   Many refuse to harvest wood from these places, believing the spirits who reside within will bring a curse upon them and their families. Others fear the creatures and beings which lurk within. For these reasons, even near settled areas, the tangles still stand.
     features:
       - roll: { min: 21, max: 43 }
         text: Dense thicket
@@ -532,11 +532,11 @@ site_domains:
     _source:
       <<: *Source
       page: 93
-    summary: An age-old subterranean dungeon.
-    description: |-
-      These subterranean structures are a mystery. They are inexplicably ancient, older perhaps than even the [Firstborn](datasworn:npc_collection:classic/firstborn). Their passages and halls hide dangers within unfathomable darkness.
+    description: An age-old subterranean dungeon.
+    # description: |-
+    #   These subterranean structures are a mystery. They are inexplicably ancient, older perhaps than even the [Firstborn](datasworn:npc_collection:classic/firstborn). Their passages and halls hide dangers within unfathomable darkness.
 
-      Most [Ironlanders](datasworn:npc_collection:classic/ironlanders) stay well clear of these places. But some stumble upon the entrance to an underkeep and delve inside, drawn by its secrets or the alluring promise of forgotten power. Others, desperate for protection from the perils of the surface world, foolishly try to use the depths of an underkeep as a sanctum for their kin or clan. They soon discover that the greatest threats lie beneath.
+    #   Most [Ironlanders](datasworn:npc_collection:classic/ironlanders) stay well clear of these places. But some stumble upon the entrance to an underkeep and delve inside, drawn by its secrets or the alluring promise of forgotten power. Others, desperate for protection from the perils of the surface world, foolishly try to use the depths of an underkeep as a sanctum for their kin or clan. They soon discover that the greatest threats lie beneath.
     features:
       - roll: { min: 21, max: 43 }
         text: Carved passages
