--- a/source_data/delve/site_themes.yaml
+++ b/source_data/delve/site_themes.yaml
@@ -16,11 +16,11 @@ site_themes:
         authors:
           - name: Shawn Tomkin
       page: 84
-    summary: This place holds the secrets of a bygone age.
-    description: |-
-      An ancient site contains the mysteries, legacies, and dangers of another age.
+    description: This place holds the secrets of a bygone age.
+    # description: |-
+    #   An ancient site contains the mysteries, legacies, and dangers of another age.
 
-      Walking the paths of this place is like stepping through time. Ruins and relics provide glimpses of long-forgotten people and events. The knowledge and power hidden here are a tempting lure, but those treasures may come with a dire cost. Some secrets are best left buried.
+    #   Walking the paths of this place is like stepping through time. Ruins and relics provide glimpses of long-forgotten people and events. The knowledge and power hidden here are a tempting lure, but those treasures may come with a dire cost. Some secrets are best left buried.
     features:
       - roll: { min: 1, max: 4 }
         text: Evidence of lost knowledge
@@ -67,11 +67,11 @@ site_themes:
     _source:
       <<: *Source
       page: 84
-    summary: This place is tainted by dark magic.
-    description: |-
-      A corrupted site is befouled by dark forces. It might be the ancient magic of the Ironlands, or the residue of ancient evils, concentrated here like poisoned water soaked into a sponge. Perhaps a powerful mystic dwells in this place, one who walks a sinister path in search of power.
+    description: This place is tainted by dark magic.
+    # description: |-
+    #   A corrupted site is befouled by dark forces. It might be the ancient magic of the Ironlands, or the residue of ancient evils, concentrated here like poisoned water soaked into a sponge. Perhaps a powerful mystic dwells in this place, one who walks a sinister path in search of power.
 
-      When you enter a corrupted site, you can feel the wrongness of it down to your bones. The air is tainted with foul smells, or tinged with strange energies. You hear unintelligible whispers. Shadows lurk at the edge of your vision. The creatures of this place are twisted by corruption, and the people are in thrall to a dark influence.
+    #   When you enter a corrupted site, you can feel the wrongness of it down to your bones. The air is tainted with foul smells, or tinged with strange energies. You hear unintelligible whispers. Shadows lurk at the edge of your vision. The creatures of this place are twisted by corruption, and the people are in thrall to a dark influence.
     features:
       - roll: { min: 1, max: 4 }
         text: Mystic focus or conduit
@@ -116,11 +116,11 @@ site_themes:
     _source:
       <<: *Source
       page: 85
-    summary: Foes defend this place against intruders.
-    description: |-
-      A fortified site is held and defended by an enemy force. It might be an enemy camp, an outpost, a fortress, or a closely-guarded territory.
+    description: Foes defend this place against intruders.
+    # description: |-
+    #   A fortified site is held and defended by an enemy force. It might be an enemy camp, an outpost, a fortress, or a closely-guarded territory.
 
-      Infiltrating this place requires caution and cunning. You may be forced to avoid inhabitants, sentries, and patrols. Revealing yourself or causing a disturbance will catch the attention of the denizens, perhaps forcing you to fight your way to your objective.
+    #   Infiltrating this place requires caution and cunning. You may be forced to avoid inhabitants, sentries, and patrols. Revealing yourself or causing a disturbance will catch the attention of the denizens, perhaps forcing you to fight your way to your objective.
     features:
       - roll: { min: 1, max: 4 }
         text: Camp or quarters
@@ -166,11 +166,11 @@ site_themes:
     _source:
       <<: *Source
       page: 85
-    summary: The faithful worship here.
-    description: |-
-      A hallowed site is a place of great reverence, suffused with the power of old gods or the fervency of belief. It might be a location of religious significance, the resting place of legendary relics or figures, or the haven of a religious leader.
+    description: The faithful worship here.
+    # description: |-
+    #   A hallowed site is a place of great reverence, suffused with the power of old gods or the fervency of belief. It might be a location of religious significance, the resting place of legendary relics or figures, or the haven of a religious leader.
 
-      Hallowed places may be warded by ancient rituals, or imbued with divine energy. But it is the faithful and the zealous who will sacrifice everything to defend this place.
+    #   Hallowed places may be warded by ancient rituals, or imbued with divine energy. But it is the faithful and the zealous who will sacrifice everything to defend this place.
     features:
       - roll: { min: 1, max: 4 }
         text: Temple or altar
@@ -213,11 +213,11 @@ site_themes:
     _source:
       <<: *Source
       page: 86
-    summary: Restless spirits are bound to this place.
-    description: |-
-      Within a haunted site, dread, sadness, and fear are palpable. Disturbing sounds and visions lure the unwary and terrorize the vulnerable. Gird your will when you enter this place, for you walk at the boundary of life and death.
+    description: Restless spirits are bound to this place.
+    # description: |-
+    #   Within a haunted site, dread, sadness, and fear are palpable. Disturbing sounds and visions lure the unwary and terrorize the vulnerable. Gird your will when you enter this place, for you walk at the boundary of life and death.
 
-      Some lost souls, unaware they have passed, wander the site in search of answers. Others, stricken by eternal grief, seek to set right what caused their death or see their vows fulfilled. But all too often, the denizens of this place are undone by their deaths. They are rage and terror made incarnate, feeling nothing but hate for the living and a hunger for warmth which will never be sated.
+    #   Some lost souls, unaware they have passed, wander the site in search of answers. Others, stricken by eternal grief, seek to set right what caused their death or see their vows fulfilled. But all too often, the denizens of this place are undone by their deaths. They are rage and terror made incarnate, feeling nothing but hate for the living and a hunger for warmth which will never be sated.
     features:
       - roll: { min: 1, max: 4 }
         text: Tomb or burial site
@@ -261,11 +261,11 @@ site_themes:
     _source:
       <<: *Source
       page: 86
-    summary: Foul creatures dwell here.
-    description: |-
-      Foul creatures swarm these sites, overwhelming trespassers with sheer numbers and unchecked ferocity. The denizens do little beyond multiplying, feeding, and expanding, ravenous for fresh kills to feed the swarm.
+    description: Foul creatures dwell here.
+    # description: |-
+    #   Foul creatures swarm these sites, overwhelming trespassers with sheer numbers and unchecked ferocity. The denizens do little beyond multiplying, feeding, and expanding, ravenous for fresh kills to feed the swarm.
 
-      Navigation through this place, across paths undermined by the hordes, may be perilous. The sights and smells may test your fortitude. But it is the creatures which pose the greatest threat, as they ambush and cut off your escape with unforeseen cunning.
+    #   Navigation through this place, across paths undermined by the hordes, may be perilous. The sights and smells may test your fortitude. But it is the creatures which pose the greatest threat, as they ambush and cut off your escape with unforeseen cunning.
     features:
       - roll: { min: 1, max: 4 }
         text: Inhabited nest
@@ -310,11 +310,11 @@ site_themes:
     _source:
       <<: *Source
       page: 87
-    summary: Time, disaster, or strife have taken their toll.
-    description: |-
-      Time, weather, war, or calamity have laid waste to a ravaged site. The terrain is precarious. Hazards lurk around every corner. You may face glimpses of a former greatness, but this place is a ruined shadow of what it once was.
+    description: Time, disaster, or strife have taken their toll.
+    # description: |-
+    #   Time, weather, war, or calamity have laid waste to a ravaged site. The terrain is precarious. Hazards lurk around every corner. You may face glimpses of a former greatness, but this place is a ruined shadow of what it once was.
 
-      Traversing a ravaged site requires care, cunning, and quick wits to react to sudden perils. The environment here is your greatest enemy. It is a force, as willful as any intelligent adversary, which will see your quest undone.
+    #   Traversing a ravaged site requires care, cunning, and quick wits to react to sudden perils. The environment here is your greatest enemy. It is a force, as willful as any intelligent adversary, which will see your quest undone.
     features:
       - roll: { min: 1, max: 4 }
         text: Path of destruction
@@ -358,11 +358,11 @@ site_themes:
     _source:
       <<: *Source
       page: 87
-    summary: Nature prevails in this place.
-    description: |-
-      Despite our attempts to extend our control into untracked reaches, the primal forces of nature still hold sway across the Ironlands. In those wild places, we must test our shields against tooth and claw, our wits against insidious creatures, and our resolve against dangerous terrain and harsh environments.
+    description: Nature prevails in this place.
+    # description: |-
+    #   Despite our attempts to extend our control into untracked reaches, the primal forces of nature still hold sway across the Ironlands. In those wild places, we must test our shields against tooth and claw, our wits against insidious creatures, and our resolve against dangerous terrain and harsh environments.
 
-      Be wary when you enter the wild places of this world. Beyond the comforting walls of your village, you are not the hunter. You are the prey.
+    #   Be wary when you enter the wild places of this world. Beyond the comforting walls of your village, you are not the hunter. You are the prey.
     features:
       - roll: { min: 1, max: 4 }
         text: Denizen’s lair
