--- a/source_data/delve/site_domains.yaml
+++ b/source_data/delve/site_domains.yaml
@@ -17,7 +17,7 @@ site_domains:
         authors:
           - name: Shawn Tomkin
       page: 88
-    description: The dead are enshrined here.
+    summary: The dead are enshrined here.
     # description: |-
     #   In this cruel land, there is no shortage of dead to be put to rest. Some barrows are simple crypts for a family or steading. Others are more elaborate or extensive, plunging well into the depths of the earth. A few inconspicuous mounds, their rock and earth worn by time, mark an entryway into impossibly labyrinthine tombs built by long-forgotten people.
 
@@ -79,7 +79,7 @@ site_domains:
     _source:
       <<: *Source
       page: 88
-    description: A place of stone and darkness.
+    summary: A place of stone and darkness.
     # description: |-
     #   Another world lies beneath our feet. Caverns vein the Ironlands with meandering tunnels, plunging pits, soaring chambers, and absolute darkness. Claustrophobic crawlspaces and crevices may lead to miles-long cave complexes. Underground waterways carve a relentless path through stone.
 
@@ -124,7 +124,7 @@ site_domains:
     _source:
       <<: *Source
       page: 89
-    description: A place of deep caves and enduring cold.
+    summary: A place of deep caves and enduring cold.
     # description: |-
     #   These maze-like tunnels are found in the most inhospitable northern reaches of the Ironlands—carved through glacier, mountain, and hill—or in places of supernatural cold. Their icy depths are a perilous environment of fracturing terrain, shadowy reflections, hollow echoes, and lurking predators.
 
@@ -169,7 +169,7 @@ site_domains:
     _source:
       <<: *Source
       page: 89
-    description: A frigid landscape formed of frozen seas.
+    summary: A frigid landscape formed of frozen seas.
     # description: |-
     #   An Icereach is an expanse of frozen sea, blue-white and sprawling in all directions. These sites are typically found in the northernmost waters. However, a few vast icereaches—kept perpetually frozen by forces we do not understand—clog the seas in southern regions.
 
@@ -215,7 +215,7 @@ site_domains:
     _source:
       <<: *Source
       page: 90
-    description: Tunnels dug greedily and deep.
+    summary: Tunnels dug greedily and deep.
     # description: |-
     #   Within the earth, riches await the bold. Some mines are shallow pits worked by pick and shovel. Others are offshoots of existing caverns which pierce deep into hills and mountains. A few are the remains of vast underground complexes built by forgotten cultures.
 
@@ -260,7 +260,7 @@ site_domains:
     _source:
       <<: *Source
       page: 90
-    description: Treacherous paths over high mountains.
+    summary: Treacherous paths over high mountains.
     # description: |-
     #   Winding through highlands and mountain ranges, these sites offer a tempting route over otherwise impassable terrain. But treacherous landscapes, foul weather, and a host of mountain predators offer their own dangers. Raiders and others take advantage of these natural chokepoints to ambush the unwary.
 
@@ -306,7 +306,7 @@ site_domains:
     _source:
       <<: *Source
       page: 91
-    description: The crumbling legacy of a dead civilization.
+    summary: The crumbling legacy of a dead civilization.
     # description: |-
     #   These decaying edifices, skeletal and shadowed, mark the remains of once-great communities and civilizations. Some of these sites have been newly adapted by [Ironlanders](datasworn:npc_collection:classic/ironlanders) as shelter, temple, or citadel. Others are home only to dangerous creatures and dark forces.
 
@@ -352,7 +352,7 @@ site_domains:
     _source:
       <<: *Source
       page: 91
-    description: Stone passages carved by ocean waves.
+    summary: Stone passages carved by ocean waves.
     # description: |-
     #   Carved by ocean waves and unyielding currents, the sea caves pockmarking the coasts plunge deep into the land’s dark heart. Deadly creatures or determined foes often lair within, but it is the water that is your ever-present enemy. The chill and damp seep into your bones. The tides and upland flooding can bring a torrent of water with little warning. You plunge desperately through submerged passages, praying that an opening will provide a pocket of air.
 
@@ -397,7 +397,7 @@ site_domains:
     _source:
       <<: *Source
       page: 92
-    description: A primeval marsh, cloaked in mist.
+    summary: A primeval marsh, cloaked in mist.
     # description: |-
     #   These foul sites are cloaked in mist, clogged with muddy peat, and drenched in fetid water. Thickets of gray, skeletal trees conceal stalking creatures. Strange shapes move in the fog and beneath dark, placid water. Narrow trails tease with the promise of passage, but instead lead to hidden quagmires.
 
@@ -442,7 +442,7 @@ site_domains:
     _source:
       <<: *Source
       page: 92
-    description: A fortress secured against trespassers.
+    summary: A fortress secured against trespassers.
     # description: These sites weather storms and sieges alike. Their walls stand firm against the forces of this dark land. They are fortified against attack and rife with guards, traps, and other defenses. For those who dwell within, strongholds provide the comfort of wood and stone, axe and bow. For those who seek to breach the walls, they can be as unyielding and unforgiving as the most stalwart ironbound shield.
     features:
       - roll: { min: 21, max: 43 }
@@ -486,7 +486,7 @@ site_domains:
     _source:
       <<: *Source
       page: 93
-    description: A perilous forest of eternal shadow.
+    summary: A perilous forest of eternal shadow.
     # description: |-
     #   A tanglewood is a thick wilderness, shrouded in mist. Overhanging, twisted boughs obscure the sky. The ground is snarled with exposed roots. The wind carries foreboding whispers, and branches rattle like old bones.
 
@@ -532,7 +532,7 @@ site_domains:
     _source:
       <<: *Source
       page: 93
-    description: An age-old subterranean dungeon.
+    summary: An age-old subterranean dungeon.
     # description: |-
     #   These subterranean structures are a mystery. They are inexplicably ancient, older perhaps than even the [Firstborn](datasworn:npc_collection:classic/firstborn). Their passages and halls hide dangers within unfathomable darkness.
 
