--- a/source_data/delve/site_themes.yaml
+++ b/source_data/delve/site_themes.yaml
@@ -16,7 +16,7 @@ site_themes:
         authors:
           - name: Shawn Tomkin
       page: 84
-    description: This place holds the secrets of a bygone age.
+    summary: This place holds the secrets of a bygone age.
     # description: |-
     #   An ancient site contains the mysteries, legacies, and dangers of another age.
 
@@ -67,7 +67,7 @@ site_themes:
     _source:
       <<: *Source
       page: 84
-    description: This place is tainted by dark magic.
+    summary: This place is tainted by dark magic.
     # description: |-
     #   A corrupted site is befouled by dark forces. It might be the ancient magic of the Ironlands, or the residue of ancient evils, concentrated here like poisoned water soaked into a sponge. Perhaps a powerful mystic dwells in this place, one who walks a sinister path in search of power.
 
@@ -116,7 +116,7 @@ site_themes:
     _source:
       <<: *Source
       page: 85
-    description: Foes defend this place against intruders.
+    summary: Foes defend this place against intruders.
     # description: |-
     #   A fortified site is held and defended by an enemy force. It might be an enemy camp, an outpost, a fortress, or a closely-guarded territory.
 
@@ -166,7 +166,7 @@ site_themes:
     _source:
       <<: *Source
       page: 85
-    description: The faithful worship here.
+    summary: The faithful worship here.
     # description: |-
     #   A hallowed site is a place of great reverence, suffused with the power of old gods or the fervency of belief. It might be a location of religious significance, the resting place of legendary relics or figures, or the haven of a religious leader.
 
@@ -213,7 +213,7 @@ site_themes:
     _source:
       <<: *Source
       page: 86
-    description: Restless spirits are bound to this place.
+    summary: Restless spirits are bound to this place.
     # description: |-
     #   Within a haunted site, dread, sadness, and fear are palpable. Disturbing sounds and visions lure the unwary and terrorize the vulnerable. Gird your will when you enter this place, for you walk at the boundary of life and death.
 
@@ -261,7 +261,7 @@ site_themes:
     _source:
       <<: *Source
       page: 86
-    description: Foul creatures dwell here.
+    summary: Foul creatures dwell here.
     # description: |-
     #   Foul creatures swarm these sites, overwhelming trespassers with sheer numbers and unchecked ferocity. The denizens do little beyond multiplying, feeding, and expanding, ravenous for fresh kills to feed the swarm.
 
@@ -310,7 +310,7 @@ site_themes:
     _source:
       <<: *Source
       page: 87
-    description: Time, disaster, or strife have taken their toll.
+    summary: Time, disaster, or strife have taken their toll.
     # description: |-
     #   Time, weather, war, or calamity have laid waste to a ravaged site. The terrain is precarious. Hazards lurk around every corner. You may face glimpses of a former greatness, but this place is a ruined shadow of what it once was.
 
@@ -358,7 +358,7 @@ site_themes:
     _source:
       <<: *Source
       page: 87
-    description: Nature prevails in this place.
+    summary: Nature prevails in this place.
     # description: |-
     #   Despite our attempts to extend our control into untracked reaches, the primal forces of nature still hold sway across the Ironlands. In those wild places, we must test our shields against tooth and claw, our wits against insidious creatures, and our resolve against dangerous terrain and harsh environments.
 
