add impact checkbox for "command" meter on Crew Commander asset

--- a/source_data/sundered_isles/assets/path.yaml
+++ b/source_data/sundered_isles/assets/path.yaml
@@ -147,6 +147,11 @@ assets:
             field_type: condition_meter
             max: 4
             value: 2
+            controls:
+              commandless:
+                is_impact: true
+                label: commandless
+                field_type: checkbox
       cutthroat:
         name: Cutthroat
         type: asset
